# android_virtual_environment

./: build.gradle
src/androidTest/java/io/xao/myapplication/: ExampleInstrumentedTest.kt
src/main/: AndroidManifest.xml
src/main/cpp/: CMakeLists.txt  Cargo.toml  native-lib.cpp  runtest.sh
src/main/cpp/src/: bin.rs  docker_hub copy.bak  docker_hub.rs  index.html  lib.rs  rust_jni_app.rs  vm.rs
src/main/cpp/src/rust_jni_app/: docker_hub.rs  vm.rs
src/main/java/io/xao/myapplication/: MainActivity.kt  MainBroadcastReceiver.kt  MainService.kt
src/main/res/values/: themes.xml
src/main/res/values-night/: themes.xml
src/test/java/io/xao/myapplication/: ExampleUnitTest.kt
