[package]
name = "main_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "~0.20"
#futures = "~0.3"
reqwest = {version="~0.11",features=["rustls-tls"],default-features = false}
anyhow = "~1"
tokio = {version="~1.24",features = ["rt", "macros"] }
xz = {version="~0.1",features = ["tokio"]}
ar = "~0.9"
tar = "~0.4"

[lib]
name = "main_lib"
crate-type = ["staticlib"]

