[package]
name = "main_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "~0.20"
#futures = "~0.3"
reqwest = {version="~0.11",features=["rustls-tls"],default-features = false}
hyper = { git = "https://github.com/hyperium/hyper/", features=["full"] } 
anyhow = "~1"
tokio = { version = "~1.24", features = ["rt", "macros", "process", "io-util", "io-std", "fs"] }
xz = {version="~0.1",features = ["tokio"]}
ar = "~0.9"
tar = "~0.4"
http-body-util = "~0.1.0-rc.2"
bytes = "~1.3"
serde_json = "~1.0"
flate2 = "~1.0"
serde = { version = "~1.0", features = ["std", "derive"] }
#async-compression = { version = "~0.3.15", features = ["gzip", "xz", "tokio", "bzip2"] }
#async-tar = "0.4.2"

[lib]
name = "main_lib"
crate-type = ["staticlib"]

