[package]
name = "rust_jni_app"
version = "0.1.0"
edition = "2021"
#build = "build.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "~0.20"
#futures = "~0.3"
reqwest = {version="~0.11",features=["rustls-tls"],default-features = false}
hyper = { git = "https://github.com/hyperium/hyper/", features=["full"] } 
anyhow = "~1"
tokio = { version = "~1.24", features = ["rt", "macros", "process", "io-util", "io-std", "fs"] }
xz = {version="~0.1",features = ["tokio"]}
ar = "~0.9"
tar = "~0.4"
http-body-util = "~0.1.0-rc.2"
bytes = "~1.3"
serde_json = "~1.0"
flate2 = "~1.0"
serde = { version = "~1.0", features = ["std", "derive"] }
#hmac-sha512 = "1.1.4"
digest = "~0.10"
sha2 = "~0.10"
nix = { version="~0.26",features= ["mount"] }

[features]
jni = [] # feature has no explicit dependencies
bin = [] # feature has no explicit dependencies

#[workspace]

#[dependencies]
#rust_jni_app = { path = "../rust_jni_app" }

[[bin]]
name = "virtual_engine_bin"
#crate-type = ["staticlib"]
path = "src/bin.rs"

[lib]
name = "main_lib"
crate-type = ["staticlib"]
path = "src/lib.rs"
required-features = ["jni"]


[profile.release]
strip = true
opt-level = 3
lto = true



#    0: no optimizations
#    1: basic optimizations
#    2: some optimizations
#    3: all optimizations
#    "s": optimize for binary size
#    "z": optimize for binary size, but also turn off loop vectorization.


#cargo build --release --bin virtual_engine_bin


#Fixing build error for NDK 23 and above
#find out all the 4 folders containing file libunwind.a, in my PC, it's C:\Users\Administrator\AppData\Local\Android\Sdk\ndk\23.1.7779620\toolchains\llvm\prebuilt\windows-x86_64\lib64\clang\12.0.8\lib\linux\x86_64\ and more. create 4 text files named libgcc.a in the same folders with this contents
#INPUT(-lunwind)


#~/Library/Android/sdk/ndk/25.1.8937393/toolchains/llvm/prebuilt/darwin-x86_64/lib64/clang/14.0.6/lib/linux/arm/libunwind.a
#~/Library/Android/sdk/ndk/25.1.8937393/toolchains/llvm/prebuilt/darwin-x86_64/lib64/clang/14.0.6/lib/linux/aarch64/libunwind.a
#~/Library/Android/sdk/ndk/25.1.8937393/toolchains/llvm/prebuilt/darwin-x86_64/lib64/clang/14.0.6/lib/linux/x86_64/libunwind.a
